--- a/snap.manifest.json
+++ b/snap.manifest.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/MetaMask/snap-template.git"
   },
   "source": {
-    "shasum": "EPuiNdNqfVcHEbRQc0umlSdc//8ALNZAKI82ZAAQU7A=",
+    "shasum": "emxznoWcekRqnFyvAh0DaxidkTyEPzl7hbOKlQcqFds=",
     "location": {
       "npm": {
         "filePath": "dist/bundle.js",
@@ -21,7 +21,8 @@
     "snap_notify": {},
     "snap_confirm": {},
     "endowment:network-access": {},
-    "snap_manageState": {}
+    "snap_manageState": {},
+    "eth_accounts": {}
   },
   "manifestVersion": "0.1"
 }
