--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -38,10 +38,11 @@ jobs:
         with:
           path: ${{ steps.yarn-cache-dir.outputs.YARN_CACHE_DIR }}
           key: yarn-cache-${{ runner.os }}-${{ steps.yarn-version.outputs.YARN_VERSION }}-${{ hashFiles('yarn.lock') }}
-      - run: yarn --frozen-lockfile
-      - run: yarn build
-      - run: yarn build:website
+      - run: yarn install --immutable
+      - run: yarn build:site
       - name: Publish to GitHub Pages
         uses: MetaMask/action-publish-gh-pages@v2
         with:
-          source-directory: public
+          source-directory: packages/site/public
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
